--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -76,7 +76,7 @@ body {
 @media only screen and (max-width: 1024px) {
   .hero-title {
     text-align: center;
-    font-size: 1.35em;
+    font-size: 1.4em;
   }
 }
 
@@ -90,8 +90,9 @@ body {
 
 @media only screen and (max-width: 1024px) {
   .hero-subtitle {
+    margin-top: 0.3rem;
     text-align: center;
-    font-size: 1em;
+    font-size: 0.9em;
   }
 }
 
