--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,6 +7,19 @@ body {
   background-color: #111111;
 }
 
+a {
+  color: inherit;
+  text-decoration: none;
+}
+
+.link {
+  color: inherit;
+  text-decoration: none;
+  font-weight: 600;
+  border-bottom: dotted 1px #000000;
+  font-size: 0.9em;
+}
+
 .hero-bits {
   position: absolute;
   top: 0;
@@ -364,7 +377,7 @@ body {
   margin: 0 auto;
   padding: 2rem;
   display: grid;
-  grid-template-columns: 140px 140px 1fr;
+  grid-template-columns: 180px 180px 1fr;
   grid-column-gap: 3rem;
 }
 
