--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -103,7 +103,7 @@ a {
   color: #888888;
   font-size: 1.2em;
   text-transform: capitalize;
-  margin: 0px;
+  margin-top: 0.6rem;
   padding: 0px;
   line-height: 1em;
   font-weight: normal;
