--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -30,6 +30,7 @@ a {
   font-family: monospace;
   width: 4rem;
   word-wrap: break-word;
+  user-select: none;
 }
 
 @media only screen and (max-width: 1024px) {
@@ -356,6 +357,7 @@ a {
   font-family: monospace;
   width: 4rem;
   word-wrap: break-word;
+  user-select: none;
 }
 
 @media only screen and (max-width: 1024px) {
