--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,6 +10,7 @@ body {
 a {
   color: inherit;
   text-decoration: none;
+  word-wrap: break-word;
 }
 
 .link {
@@ -31,6 +32,7 @@ a {
   width: 4rem;
   word-wrap: break-word;
   user-select: none;
+  z-index: 0;
 }
 
 @media only screen and (max-width: 1024px) {
@@ -57,6 +59,7 @@ a {
   grid-template-columns: 280px 1fr;
   grid-column-gap: 3rem;
   z-index: 1;
+  position: relative;
 }
 
 @media only screen and (max-width: 1024px) {
@@ -358,6 +361,7 @@ a {
   width: 4rem;
   word-wrap: break-word;
   user-select: none;
+  z-index: 0;
 }
 
 @media only screen and (max-width: 1024px) {
@@ -381,6 +385,8 @@ a {
   display: grid;
   grid-template-columns: 180px 180px 1fr;
   grid-column-gap: 3rem;
+  z-index: 1;
+  position: relative;
 }
 
 @media only screen and (max-width: 1024px) {
