--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -490,3 +490,10 @@ a {
   margin: 0 auto;
   max-width: 1024px;
 }
+
+.t-caret {
+  background-color: #ffcc00;
+  display: inline-block;
+  width: 6px;
+  height: 1em;
+}
