--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Exo:300,400,500&display=swap');
+@import url("https://fonts.googleapis.com/css?family=Exo:300,400,500&display=swap");
 
 html,
 body {
@@ -491,9 +491,13 @@ a {
   max-width: 1024px;
 }
 
+#window-text {
+  display: none;
+}
+
 .t-caret {
   background-color: #ffcc00;
   display: inline-block;
   width: 6px;
-  height: 0.9em;
+  height: 0.8em;
 }
