--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -115,7 +115,7 @@ a {
 
 @media only screen and (max-width: 1024px) {
   .hero-subtitle {
-    margin-top: 0.3rem;
+    margin-top: 0.8rem;
     text-align: center;
     font-size: 0.9em;
   }
@@ -139,6 +139,7 @@ a {
 }
 
 .hero-window-title {
+  padding: 0 0.5rem;
   height: 30px;
   background-color: #ffffff22;
   display: flex;
